--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+/* font ref link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet"> */
 
-<style type="text/css">
+
 body { 
 	margin:0 auto;
 	max-width: 600px;
     color: #0008;
     align-content: center;
-    background-color: #3333;
+    background-color: #FFF9;
     text-align: center;
     padding: 30 50 50 30;
     font-family: 'Montserrat', sans-serif;
 }
+
  hr {
  	border: 0;
  	border-bottom: 2px solid #0008;
@@ -40,6 +41,71 @@ color: #0008;
 	letter-spacing: 5px;
 }
 
+/* nav bar*/ 
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #0008;
+    overflow: hidden;
+    border: 2px;
+    border-radius: 20px;
+    margin: 20px;
+  }
+  
+  /* links inside the navigation bar */
+  .topnav a {
+    float:center;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    font-family: 'Monstserrat', sans-serif;
+    word-spacing: 5px;
+	letter-spacing: 5px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    
+    color: black;
+  }
+    /*small screen nav bar*/
+    @media screen and (max-width: 600px) {
+        .topnav.responsive {position: relative;}
+        .topnav.responsive a.icon {
+          position: absolute;
+          right: 0;
+          top: 0;
+        }
+        .topnav.responsive a {
+          float: none;
+          display: block;
+          text-align: left;
+        }
+      }
+
+h2{
+    color:#0008;
+    font-size: 40px;
+	font-weight: 2px;
+	font-family:'Montserrat', sans-serif;
+	text-align: center;
+	text-shadow: 2px 2px 10px #0003;
+	list-style: none;
+	width: 100%;
+	height: 90px;
+	margin: 0;
+	padding: 20px;
+    white-space: nowrap;
+    word-spacing: 5px;
+	letter-spacing: 5px;
+}
 p {
 	padding-top: 20px;
 	align-content: center;
@@ -47,23 +113,22 @@ p {
 	word-spacing: normal;
 	word-wrap: break-word;
 	white-space: normal;
-	padding-left: 100px;
-	padding-right: 100px;
+	padding-left: 50px;
+	padding-right: 50px;
 	color: #0008;
 	font-family:'Montserrat', sans-serif;
 	font-style: initial;
 	font-weight: 5px;
-	line-height: 20px;
+	line-height: 30px;
 
 }
-
+/*footer styling*/
 footer {
 	font-family: arial;
 	word-spacing: 20px;
 	font-style: italic;
 	font-size: 15px;
 	color:#888F;
-	position: fixed;
 	left: 0;
 	bottom: 0;
 	width: 100%;
@@ -71,9 +136,67 @@ footer {
 	padding: 30px;
 	margin-top: 10px;
 	letter-spacing: 5px;
-	line-height: 30px;
+    line-height: 30px;
+   
 }
+/*facebook icon */
+.fa, .in, .lights {
+    padding: 15px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+  }
+  
+  /* Add a hover effect */
+  .fa, .in, .lights :hover {
+    opacity: 0.7;
+  }
+  
+  /* FB branding */
+  /* Facebook */
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
 
+
+  /* insta brand */
+  /* Instragram */
+  .insta-instagram {
+    position: relative;
+    width: 36px;
+    height: 36px;
+    border-radius: 20%;
+    background: radial-gradient(circle at 33% 100%, #fed373 4%, #f15245 30%, #d92e7f 62%, #9b36b7 85%, #515ecf)
+  }
+  .insta-icon:after,
+  .insta-icon:before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    border: 2px solid #fff;
+    transform: translate(-50%, -50%);
+    content: ''
+  }
+  .insta-icon:before {
+    border-radius: 20%
+  }
+  .insta-icon:after {
+    width: 11px;
+    height: 11px;
+    border-radius: 50%
+  }
+  
+  
+  
+  
+  
+
+/*input form */
 input[type="click for more"]{
 background: #000;
 font-color: white;
@@ -81,6 +204,8 @@ font: sans-serif;
 padding-top: 10px;
 position: center;
 }
+
+/* profile pic index */
 .crop {
 	width: 350px;
 	height: 350px;
@@ -90,13 +215,10 @@ position: center;
 .Lauren img{
 	width: 250px;
 	height: 250px;
-	margin:0px 0 0 40px;
+	margin:0px 0 0 30px;
 	align-content: center;
 	size: 5px;
 	border: 2px;
 	border: #FFF8;
 	border-radius: 20px
 }
-	
-
-</style>
