--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* font ref link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet"> */
 
-
+/*
 body { 
 	margin:0 auto;
 	max-width: 600px;
@@ -10,7 +10,7 @@ body {
     text-align: center;
     padding: 30 50 50 30;
     font-family: 'Montserrat', sans-serif;
-}
+}*/
 
  hr {
  	border: 0;
@@ -21,7 +21,7 @@ body {
 
  }
 
-h1 {
+header {
 color: #0008;
 	font-size: 100px;
 	font-weight: 2px;
@@ -40,7 +40,6 @@ color: #0008;
 }
 
 /* nav bar*/ 
-/* Add a black background color to the top navigation */
 .topnav {
     background-color: #0008;
     overflow: hidden;
@@ -70,7 +69,6 @@ color: #0008;
   
   /* Add a color to the active/current link */
   .topnav a.active {
-    
     color: black;
   }
     /*small screen nav bar*/
@@ -195,6 +193,12 @@ footer {
   
 
 /*input form */
+.form {
+padding: 20px;
+margin: 50px auto;
+align-items: center;
+}
+
 input[type="click for more"]{
 background: #000;
 color: white;
@@ -219,4 +223,13 @@ position: center;
 	border: 2px;
 	border: #FFF8;
 	border-radius: 20px
+}
+
+/*carousel styling */
+
+.carousel-inner { 
+    text-align: center;
+}
+.carousel .item>img {
+    display: inline-block;
 }
