--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,15 @@
 /* font ref link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet"> */
 
-/*
 body { 
-	margin:0 auto;
-	max-width: 600px;
+    margin:0;
+    position: absolute;
+	max-width: 600%;
     color: #0008;
     align-content: center;
     background-color: #FFF9;
     text-align: center;
-    padding: 30 50 50 30;
     font-family: 'Montserrat', sans-serif;
-}*/
+}
 
  hr {
  	border: 0;
@@ -23,20 +22,23 @@ body {
 
 header {
 color: #0008;
-	font-size: 100px;
+/*	font-size: 100px;*/
 	font-weight: 2px;
 	text-align: center;
 	text-shadow: 2px 2px 10px #0003;
 	list-style: none;
-	width: 100%;
-	height: 90px;
 	margin: 0;
 	padding: 20px 40px;
 	white-space: nowrap;
 	overflow: show;
 	text-overflow: all;
 	word-spacing: 5px;
-	letter-spacing: 10px;
+    letter-spacing: 10px;
+    display: inline;
+}
+
+h1{
+    font-size: x-large;
 }
 
 /* nav bar*/ 
@@ -45,7 +47,8 @@ color: #0008;
     overflow: hidden;
     border: 2px;
     border-radius: 20px;
-    margin: 20px;
+    margin: 0% 10%;
+    max-width: 100%;
   }
   
   /* links inside the navigation bar */
@@ -54,6 +57,7 @@ color: #0008;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
+    margin: 20px;
     text-decoration: none;
     font-size: 17px;
     font-family: 'Monstserrat', sans-serif;
@@ -188,15 +192,15 @@ footer {
   }
   
   
-  
-  
-  
+
 
 /*input form */
 .form {
 padding: 20px;
 margin: 50px auto;
 align-items: center;
+display: inline;
+
 }
 
 input[type="click for more"]{
