--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,6 @@ color: #0008;
 	font-size: 100px;
 	font-weight: 2px;
 	text-align: center;
-	/*text-shadow: 2px 2px 10px #0003;*/
 	list-style: none;
 	margin: 0 auto;
 	white-space: nowrap;
@@ -32,19 +31,17 @@ color: #0008;
 
 h1{
     font-size: 80px;
+    text-shadow: 2px 2px 10px #0003;
 }
+hr {
+    margin: auto;
+    height:2px;
+    border-width:0;
+    color:gray;
+    background-color:gray
+   }
 
 /* nav bar*/ /*
-.topnav {
-    background-color: #0008;
-    overflow: hidden;
-    border: 2%;
-    border-radius: 20px;
-    margin: 0% auto;
-    max-width: 100%;
-    max-height: 50%;
-   size: 1%;
-  }*/
   
   /* links inside the navigation bar */
   .topnav a {
@@ -52,7 +49,7 @@ h1{
     color:rgba(12, 11, 11, 0.6);
     text-align: center;
     height: 5px;
-    padding: 14px 16px;
+   /* padding: 14px 16px; */
     margin: auto auto;
     text-decoration: none;
     font-size: 17px;
@@ -108,8 +105,7 @@ p {
 	word-spacing: normal;
 	word-wrap: break-word;
 	white-space: normal;
-	/*padding-left: 50px;
-	padding-right: 50px;*/
+	margin: 5%;
 	color: #0008;
 	font-family:'Montserrat', sans-serif;
 	font-style: initial;
@@ -201,6 +197,6 @@ button{
 }
 form {
     size: 90%;
-    border border-radius: 5px;
+    border-radius: 5px;
     letter-spacing: 5px;
 }
