--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* font ref link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet"> */
+/*
 @media only screen and  (max-width: 600px) {
     .body {position: center;
         size: 0%;
@@ -6,7 +7,7 @@
         
     }
         }
-    
+    */
 
 body { 
 	/*max-width: 600%;*/
