--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
 }
-div#container {
+#container {
     margin: 20% auto;
     width: 80%;
     text-align: center;
