--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,33 @@
 /* font ref link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet"> */
 /*small devices */
-@media screen and (max-width: 600px) {
-    #hamnav label { 
-        display: inline-block; 
-        color: white;
-        font-style: normal;
-        font-size: 1.2em;
-        padding: 10px;
-      }
-    
-      /* Break down menu items into vertical */
-      #hamitems a {
-        box-sizing: border-box;
-        display: block;
-        width: 100%;
-        border-top: 1px solid #333;
-      }
-    
-      /* Toggle Show/Hide Menu */
-      #hamitems { display: none; }
-      #hamnav input:checked ~ #hamitems { display: block; }
-    }
-}
-#hamnav {
-    width: 100%;
-    background: #000;
-    /* Optional */
-    position: sticky;
-    top: 0;
-  }
-  
-  /* Hide Hamburger */
-  #hamnav label, #hamburger { display: none; }
-  
-  /* Horizontal Menu Items */
-  #hamitems { display: flex; }
-  #hamitems a {
-    width: 20%; /* 100% / 5 tabs = 20% */
-    padding: 10px;
-    color: white;
-    text-decoration: none;
-    text-align: center;
-  }
-  #hamitems a:hover {
-    background: #401408;
-  }
-
-#hamnav label, #hamburger { display: none; }
-
-body { 
-    color: #212121;
+/* med screen */ 
+@media (min-width: 768px) {
+.navbar-expand-md .navbar-nav { 
+    justify-content: center;
     align-content: center;
-    background-color: #dce4ef;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+   
 }
-/*
+}
+
+body {
+font-family: 'Courier Prime', monospace !important;
+font-family: 'Montserrat', sans-serif!important;
+}
+
 .container {
     margin: 0 auto;
     text-align: center;
+    padding: 0 auto;
     
 }
 
-/*header {
-    color: #212121;
+navbar {
+  color: #050505;
+  background-color: rgba(255, 255, 255, 0.623);
 	font-size: 2em;
-	font-weight: 0.13em;
-    text-shadow: rgba(192, 189, 189, 0.2);
+	font-weight: 1.1em;
+  text-shadow: rgba(192, 189, 189, 0.2);
 	text-align: center;
 	list-style: none;
 	margin: 0 auto;
@@ -74,8 +35,8 @@ body {
 	overflow: show;
 	text-overflow: all;
 	word-spacing: .3em;
-    letter-spacing: .6em;
-    display: inline; 
+  letter-spacing: .6em;
+  display: inline; 
 }
 */
 
@@ -84,15 +45,17 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: rgba(73, 73, 73, 0.596) !important;
 }
 
 h1{
     font-size: 2em;
-    text-shadow: 2px 2px 10px #0003;
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.329) !important;
     font-family: 'Montserrat', sans-serif;
+    letter-spacing: 5px;
 }
 hr {
-    margin: auto;
+    margin: 0 auto;
     height:.13em;
     border-width:0;
     color: #212121;
@@ -141,7 +104,7 @@ hr {
       
 h2{
    color:#212121;
-    font-size: 3em;
+  font-size: 3em;
 	font-weight: 2px;
 	font-family:'Montserrat', sans-serif;
 	text-align: center;
@@ -154,31 +117,30 @@ h2{
 }
 p {
 	align-content: center;
-	text-align: center;
+	text-align:justify;
 	word-spacing: normal;
 	word-wrap: break-word;
 	white-space: normal;
 	margin: 5%;
 	color: #212121;
-	font-family:'Montserrat', sans-serif;
+	font-family: 'Courier Prime', monospace;
 	font-style: initial;
 	font-weight: 5px;
-	line-height: 30px;
+	
 
 }
 
 /*footer styling*/
 .footer {
-    margin-top: 3%;
-	font-family: arial;
+  margin-top: 3%;
 	word-spacing: 20px;
 	font-style: italic;
 	font-size: 85%;
-    color: #212121;
+  color: #212121;
 	text-align: center;
 	letter-spacing: 5px;
-    line-height: 30px;
-    text-decoration: none;
+  line-height: 30px;
+  text-decoration: none;
 
 }
 
@@ -227,10 +189,11 @@ button {
 
 .Lauren img, img {
 	align-content: center;
-	border: 2px;
+  size: 25%;
+	border: 2%;
 	border: #FFF8;
 	border-radius: 20px
-   
+  
     
 }
 
