--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* font ref link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet"> */
+
 /*small devices */
 /* med screen */ 
 @media (min-width: 768px) {
@@ -6,13 +7,19 @@
     justify-content: center;
     align-content: center;
     text-align: center;
-   
+    justify-content: center;
+    font-size: medium;
+    }
+    .navbar-collapse {
+      justify-content: center;
 }
 }
 
 body {
 font-family: 'Courier Prime', monospace !important;
 font-family: 'Montserrat', sans-serif!important;
+background-color: rgb(223, 199, 247);
+background-image: linear-gradient(to right,#85A2EB, rgb(252, 252, 252),#66C2E0);
 }
 
 .container {
@@ -40,12 +47,13 @@ navbar {
 }
 */
 
-.Lauren {
+.Lauren , {
     margin-top: 3%;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: rgba(73, 73, 73, 0.596) !important;
+    box-shadow: 3px 3px 1px !important;
+   
 }
 
 h1{
@@ -58,7 +66,7 @@ hr {
     margin: 0 auto;
     height:.13em;
     border-width:0;
-    color: #212121;
+    color: #1d1d1d;
    }
 
 /* nav bar*/ /*
@@ -78,13 +86,13 @@ hr {
   }
   
   /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
+  .navbar-expand-md a:hover {
+    background-color: rgba(46, 45, 45, 0.308);
     color: black;
   }
   
   /* Add a color to the active/current link */
-  .topnav a.active {
+  .nav-itemactive a.active {
     color: black;
   }
     /*small screen nav bar*/
@@ -98,7 +106,7 @@ hr {
         .topnav.responsive a {
           float: none;
           display: block;
-          text-align: left;
+          text-align: center;
         }
       }
       
@@ -115,6 +123,7 @@ h2{
     word-spacing: 5px;
 	letter-spacing: 5px;
 }
+
 p {
 	align-content: center;
 	text-align:justify;
@@ -183,7 +192,14 @@ button {
     display: inline-block;
     font-weight: bold;
     margin: 2px;
+    letter-spacing: 2px;
+    transition: .2s all ease-in-out;
+    outline: none;
+    border: 1px solid rgba(0,0,0,1);
+    box-shadow: 3px 3px 1px;
 }
+    
+   
 
 /* profile pic index */
 
