--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@ font-family: 'Courier Prime', monospace !important;
 font-family: 'Montserrat', sans-serif!important;
 text-align: center !important;
 justify-content: center;
-background-color: rgb(223, 199, 247);
-background-image: linear-gradient(80deg,#85A2EB, rgb(252, 252, 252),#66C2E0);
+background-size:cover;
+background-image: linear-gradient(80deg,#85A2EB, rgb(252, 252, 252),#66C2E0),linear-gradient(180deg,#85A2EB, rgb(252, 252, 252),#66C2E0);
 }
 
 .container {
@@ -70,6 +70,9 @@ grid-column: 2/3;
 grid-row: 1;
 justify-content: center;
 }
+.navbar-nav>li {
+float: center;
+}
 }
 
 
@@ -104,12 +107,11 @@ navbar {
     align-items: center;
 }
 h1 {
-    font-size: 5%;
+    font-size: 40px;
     letter-spacing: .5em;
     background-color: rgba(250, 240, 240, -0.13);
     width: 100%;
     margin-top: 3%;
-    font-size: 22px;
     margin-top: 5px;
 }
 
